[package]
name = "talkladok"
version = "0.1.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
failure = "0.1.5"
reqwest = "0.9.13"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
