[package]
name = "report-results-ladok-rs"
version = "0.1.0"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
base64 = "0.10.0"
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
env_logger = "0.6.1"
failure = "0.1.5"
log = "0.4.6"
reqwest = "0.9.13"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
serde_urlencoded = "*"
warp = "0.1.15"
